[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpyjs9"
description = 'Running js9 on inside jupyter'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Abdu Zoghbi", email = "a.zoghbi@nasa.gov" },
]

dependencies = []
dynamic = ["version"]

[project.urls]
Source = "https://github.com/zoghbi-a/jpyjs9"

[tool.hatch.version]
path = "jpyjs9/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [".git", ".ipynb_checkpoints"]